# parlaconclaudio

./: .READY_FOR_SYNC  .env.example  .env.template  .gitignore  AUDIO-TEST-SUITE-REPORT.md  CHANGELOG.md  DEPLOYMENT-SUMMARY-WAVE3.md  DEPLOYMENT.md  ELECTRON-SETUP.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_REPORT_PANELS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LIVE-TEST-RESULTS.md  MUI_FRONTEND_IMPLEMENTATION_REPORT.md  PROJECT_COMPLETION_REPORT.md  README.md  RTX_5080_VALIDATION_REPORT.md  SECRETS.md  SETUP-COMPLETE.md  SETUP.md  START.md  STRATEGIC-ROADMAP-WAVE4.md  TERMINAL-1-TASKS.md  TERMINAL-2-TASKS.md  TERMINAL-3-TASKS.md  UI_PREVIEW_GUIDE.md  VALIDATION_REPORT.md  VoiceBridge.bat  WAVE-2-COMPLETION-SUMMARY.md  WAVE-2-COORDINATION.md  WAVE-2-QUICKSTART.md  WINDOWS-MICROPHONE-TEST.md  build_image_docker.md  demo_audio_test.py  docker-compose.secrets.yml  docker-compose.yml  foundation-setup-report.md  package.json  pyproject.toml  (+13 more)
.claude/: settings.local.json
.github/workflows/: README.md
KB/: 01_master_orchestrator.md  02_audio_team_lead.md  03_ml_team_lead.md  04_frontend_team_lead.md  05_integration_team_lead.md  ARCHITECTURE.md  REPO EXAMPLE STRUCTURE.md  orchestrator.agent.md  orchidea.md
assets/: README.md
benchmarks/: README.md  __init__.py  audio_latency_benchmark.py  gpu_manager.py  metrics_db.py  ml_benchmark.py  quick_gpu_validation.py  test_datasets.py  wer_calculator.py
docs/: AUDIO-SUB-1_WASAPI_IMPLEMENTATION.md  AUDIO-SUB-4_SERVICE_INTEGRATION.md  SERVICES_INTEGRATION.md
docs/api/: grpc_audio_streaming.proto  openapi_rest.yaml  redis_streams.md  websocket_schemas.json
examples/: audio_service_example.py  wasapi_capture_example.py
infrastructure/docker/: Dockerfile.backend  Dockerfile.nlp  Dockerfile.stt  Dockerfile.summary
infrastructure/monitoring/: README.md  prometheus.yml
infrastructure/monitoring/grafana/dashboards/: rtstt-dashboard.json
infrastructure/monitoring/grafana/provisioning/dashboards/: dashboard.yml
infrastructure/monitoring/grafana/provisioning/datasources/: prometheus.yml
infrastructure/secrets/: .gitignore  README.md  grafana_admin_password.template  hf_token.template  jwt_secret.template  redis_password.template
orchestration/: WORKFLOW-ORCHESTRATION.md  benchmark-evaluation-terminal.md  deploy-local-terminal.md  parallel-deploy-test-terminal.md  subt-audio.md  subt-foundation.md  subt-frontend.md  subt-integration.md  subt-ml.md
orchestration/workflows/: SUB-PLAN-AUDIO-TEAM.md  SUB-PLAN-FRONTEND-TEAM.md  SUB-PLAN-INTEGRATION-TEAM.md  SUB-PLAN-ML-TEAM.md
proto/: stt_service.proto
requirements/: audio.txt  base.txt  dev.txt  ml.txt
scripts/: check-wave2-status.sh  deploy-poc.sh  download_models.py  fix_dockerfiles.py  health_check.py  notify-tts.py  run_audio_tests.sh  setup-secrets.sh  setup-wsl2.sh  wave2-sync-agent.sh
src/agents/orchestrator/: README.md  example_app.py  fastapi_app.py  health.py  message_router.py  metrics.py  test_api.py  test_server.py  websocket_gateway.py
src/core/audio_capture/: README_WASAPI.md  __init__.py  audio_capture_base.py  audio_factory.py  audio_format.py  audio_service.py  circular_buffer.py  platform_detector.py  vad_segmenter.py  vad_silero.py  wasapi_capture.py  wasapi_devices.py
src/core/audio_capture/drivers/: __init__.py  mock_driver.py  portaudio_driver.py  pulseaudio_driver.py
src/core/nlp_insights/: __init__.py  keyword_extractor.py  nlp_service.py  server.py  speaker_diarization.py
src/core/stt_engine/: __init__.py  grpc_server.py  model_setup.py  redis_consumer.py  whisper_rtx.py
src/core/summary_generator/: README.md  __init__.py  llama_summarizer.py  server.py  summary_service.py
src/host_audio_bridge/: __init__.py  audio_bridge.py  config.py  main.py
src/shared/: grpc_health_server.py  secrets.py
src/shared/protocols/: README.md  grpc_pool.py  redis_client.py
src/types/: electron.d.ts
src/ui/desktop/: README.md  main.js  preload.js
src/ui/desktop/renderer/: App.tsx  index.html  main.tsx  store.ts  theme.ts
src/ui/desktop/renderer/components/: DEMO_APP.tsx  ElectronTest.tsx  InsightsPanel.tsx  PANEL_INTEGRATION_EXAMPLE.tsx  README.md  README_PANELS.md  SUMMARY_SETTINGS_EXAMPLE.tsx  SettingsPanel.tsx  SummaryPanel.tsx  TestDataGenerator.tsx  TestPanelsWithMockData.tsx  TranscriptionPanel.tsx  index.ts
src/ui/desktop/renderer/components/AudioVisualizer/: AudioVisualizer.tsx
src/ui/desktop/renderer/contexts/: ThemeContext.tsx
src/ui/desktop/renderer/hooks/: INTEGRATION_EXAMPLE.tsx  README.md  useElectronAPI.ts  useWebSocket.ts
src/voice_bridge/: __init__.py  __main__.py  audio_recorder.py  bridge.py  config.py  hotkey_listener.py  launcher.py  output_handler.py  sounds.py  transcriber.py  tray_icon.py
tests/: AUDIO_TESTING.md  test_nlp_service_integration.py  test_redis_streams.py  test_summary_service_integration.py
tests/fixtures/audio/: README.md
tests/integration/: __init__.py  test_audio_pipeline_e2e.py  test_audio_service.py  test_websocket_audio_stream.py
tests/manual/: __init__.py  test_microphone_capture.py
tests/performance/: __init__.py  test_audio_latency.py  test_throughput.py
tests/unit/: test_audio_format.py  test_benchmarks.py  test_circular_buffer.py  test_vad.py  test_wasapi_capture.py  test_wasapi_devices.py
tests/utils/: __init__.py  audio_generator.py  audio_loader.py
(+9 files in other folders)
