[tool.poetry]
name = "realtime-stt-orchestrator"
version = "1.0.0"
description = "Real-Time Speech-to-Text system with ORCHIDEA multi-agent orchestration for Windows 11"
authors = ["RTSTT Team"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

# Core dependencies
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# WebSocket & Redis
websockets = "^12.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}

# gRPC
grpcio = "^1.59.0"
grpcio-tools = "^1.59.0"
protobuf = "^4.25.0"

# Audio processing (base)
numpy = "^1.26.0"
scipy = "^1.11.0"

# Async & concurrency
asyncio = "^3.4.3"
aiofiles = "^23.2.1"
aioredis = "^2.0.1"

# Monitoring & metrics
prometheus-client = "^0.19.0"
psutil = "^5.9.6"

# Logging
structlog = "^23.2.0"
python-json-logger = "^2.0.7"

# Configuration
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"

# HTTP client
httpx = "^0.25.1"

[tool.poetry.group.audio]
optional = true

[tool.poetry.group.audio.dependencies]
# Windows audio capture
pywin32 = {version = "^306", platform = "win32"}
pyaudio = "^0.2.14"

# Voice Activity Detection
torch = "^2.1.0"
torchaudio = "^2.1.0"
# Silero VAD will be loaded as model

[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
# STT Engine
openai-whisper = "^20231117"
faster-whisper = "^0.10.0"

# GPU acceleration
torch = {version = "^2.1.0+cu121", source = "pytorch"}
torchaudio = {version = "^2.1.0+cu121", source = "pytorch"}
tensorrt = "^8.6.1"

# NLP
transformers = "^4.35.0"
sentence-transformers = "^2.2.2"
keybert = "^0.8.3"
pyannote-audio = "^3.1.0"

# Summary
accelerate = "^0.25.0"
bitsandbytes = "^0.41.0"

# Model optimization
optimum = "^1.15.0"
onnx = "^1.15.0"
onnxruntime-gpu = "^1.16.0"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
hypothesis = "^6.92.1"

# Code quality
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pylint = "^3.0.2"
mypy = "^1.7.0"

# Type stubs
types-redis = "^4.6.0"
types-pyyaml = "^6.0.12"
types-protobuf = "^4.24.0"

# Pre-commit hooks
pre-commit = "^3.5.0"

# Documentation
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.14"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

# Profiling
py-spy = "^0.3.14"
memory-profiler = "^0.61.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = [
    "faster_whisper.*",
    "pyannote.*",
    "keybert.*",
    "silero.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
